--- a/Frontend/src/app/pages/employeer/utils/carpeta/carpeta.component.html
+++ b/Frontend/src/app/pages/employeer/utils/carpeta/carpeta.component.html
@@ -24,10 +24,10 @@
               </div>
               <!-- Modal body -->
               <div class="p-4 md:p-5">
-                  <form class="space-y-4" action="#">
+                  <form [formGroup]="userForm"  class="space-y-4" (submit)="handleSubmit()" >
                       <div>
                           <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Nombre</label>
-                          <input type="text" name="email" id="email" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white" placeholder="nombre de carpeta" required />
+                          <input type="text" name="email" id="email" formControlName="nameFolder" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white" placeholder="nombre de carpeta" required />
                       </div>
                       <button type="submit" class="w-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Crear Carpeta</button>
                   </form>
